# hoi4-modding-rag

./: .env.example  .gitignore  .ignore.py  .pre-commit-config.yaml  README.md  STATUS.md  pyproject.toml  pytest_log.txt  uv.lock.backup
.github/workflows/: ci.yml
scripts/: cache_models.py  ingest_kb.py  run_server.py
src/: __init__.py  config.py
src/chunking/: __init__.py  markdown_chunker.py
src/embeddings/: __init__.py  bge_m3.py
src/hoi4_rag/: __init__.py  config.py
src/hoi4_rag/chunking/: markdown_chunker.py
src/hoi4_rag/embeddings/: bge_m3.py
src/hoi4_rag/ingestion/: pipeline.py
src/hoi4_rag/lancedb/: sparse_index.py
src/hoi4_rag/mcp_server/: server.py
src/hoi4_rag/retrieval/: hybrid_search.py  reranker.py
src/hoi4_rag/vectordb/: lancedb_store.py
src/ingestion/: __init__.py  pipeline.py
src/mcp_server/: __init__.py  server.py
src/retrieval/: __init__.py  hybrid_search.py  reranker.py
src/vectordb/: __init__.py
tests/: test_chunking.py  test_mcp_tools.py  test_sparse_index.py  test_vectordb.py
tests/basic/: test_embeddings.py  test_retrieval.py  test_vectordb.py
